--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+EggTimerApp - Code.xcodeproj/project.xcworkspace/contents.xcworkspacedata
